--- a/client/src/style.css
+++ b/client/src/style.css
@@ -51,3 +51,47 @@
       float: none;
     }
   }
+
+  #password {
+  align-items: center;
+  text-align: center ; 
+  }
+
+
+ .submit {
+  margin-top: 60px ;
+ }
+
+ #wrapper {
+  align-items: center ;
+  text-align: center ;
+} 
+
+.techName {
+  color: blue;
+  margin-left: 40px;
+  font-family: 'Courier New', Courier, monospace;
+}
+.button-xlarge {
+  float:center; 
+  margin-right:50px; 
+  margin-top:60px; 
+}
+
+#techview {
+  align-items: center ;
+  text-align: center; 
+}
+
+#table {
+  align-items: center !important;
+
+}
+
+.password {
+  margin-top:10px ;
+  font-size: 11px;
+    width: auto;
+  height: auto;
+  background-color: none
+}
